# where-rs

./: Cargo.toml  LICENSE  TODO  build.sh  flake.nix  shell.nix
.github/workflows/: build_where.yml
where-rs/: Cargo.toml  default_config.toml
where-rs/src/: args.rs  config.rs  main.rs  servers.rs  ui.rs
whered/: Cargo.toml
whered/services/: dev.equestria.whered.plist  whered  whered.service
whered/src/: args.rs  main.rs
whrd/: Cargo.toml
whrd/src/: error.rs  lib.rs  parse.rs
