[package]
name = "whrd"
version = "1.2.0"
edition = "2021"
description = "A Rust library to work with the WHRD/UDP protocol, a protocol to access a list of logged in users on multiple systems at once."
authors = ["Starscouts", "ryze132"]

[lib]
name = "whrd"
crate-type = ["dylib", "lib"]

[target."cfg(unix)".dependencies]
coreutils_core = "0.1.2"
